# async_simple

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md
.github/workflow/: ci.yml
.github/workflows/: ci.yml
async_simple/: async_simple.cppm  async_simple.modulemap
async_simple/coro/: PromiseAllocator.h
bazel/config/: copt.bzl
bazel/patches/asio/: build.patch  cppm.patch  module-bazel.patch  module.patch  modulemap.patch
bazel/patches/boringssl/: BUILD.bazel  build.patch  crypto-cppm.patch  crypto-modulemap.patch  module.patch  ssl-cppm.patch  ssl-modulemap.patch  util.patch
bazel/patches/google_benchmark/: BUILD.bazel  build.patch  cppm.patch  module-bazel.patch  module.patch  modulemap.patch
bazel/patches/googletest/: BUILD.bazel  build.patch  cppm.patch  load.patch  module-bazel.patch  module.patch  modulemap.patch
bazel/patches/libaio/: BUILD.bazel  build.patch  cppm.patch  module-bazel.patch  modulemap.patch
std_module/: BUILD.bazel  MODULE.bazel  std.mock.cppm  std.modulemap
